styles.css
html {
  box-sizing: border-box;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}

* {
  box-sizing: inherit;
}

.main-section {
  margin: 0.8rem 0.2rem;
}

#navbar > ul {
  list-style: none;
}

a:any-link {
  text-decoration: none;
  color: #b3b3ff;
}

body {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 24px;
  padding: 0.5rem;
  font-weight: 300;
  color: ghostwhite;
  background-color: darkslategray;
}

h1,
h2 {
  text-align: center;
}

p {
  text-align: justify;
  text-justify: auto;
}

code {
  font-family: "Courier New", Courier, monospace;
}

@media (max-width: 767px) {
  #navbar {
    width: 100%;
  }

  #main-doc {
    width: 100%;
  }
}

@media (min-width: 768px) {
  #navbar {
    width: 40%;
    max-width: 400;
  }

  #main-doc {
    width: 60%;
    max-width: 600px;
  }
}

